--- a/index.html
+++ b/index.html
@@ -386,6 +386,7 @@
             display: none;
             opacity: 0;
             transition: opacity 0.5s ease;
+            overflow-x: auto; /* Добавляем горизонтальную прокрутку */
         }
 
         .calendar-header {
@@ -424,6 +425,7 @@
             display: grid;
             grid-template-columns: repeat(7, 1fr);
             gap: 0.25rem;
+            min-width: 300px; /* Минимальная ширина для календаря */
         }
 
         .calendar-days div {
@@ -437,7 +439,7 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            height: 2.5rem;
+            height: 3rem; /* Уменьшаем высоту ячеек */
             font-size: 0.8rem;
         }
 
@@ -484,7 +486,7 @@
 
         @media (max-width: 480px) {
             .calendar-days div {
-                height: 2rem;
+                height: 2rem; /* Еще меньше на мобильных устройствах */
                 font-size: 0.7rem;
             }
 
@@ -494,6 +496,14 @@
 
             .calendar-days div.has-transaction .amount {
                 font-size: 0.5rem;
+            }
+
+            .calendar-card {
+                padding: 0.5rem; /* Уменьшаем отступы */
+            }
+
+            .calendar-weekdays {
+                font-size: 0.7rem; /* Уменьшаем размер шрифта дней недели */
             }
         }
     </style>
